# graph-toolkit

./: .buildinfo  .gitignore  .nojekyll  INSTALL  Makefile  README.md  build-lua51.lhelper  build-lua54.lhelper  build-luajit.lhelper  build.lhelper  contour.html  contour.lua  genindex.html  graph-toolkit-scm-1.rockspec  graphics.html  html  index.html  init.lua  meson.build  meson_options.txt  objects.inv  py-modindex.html  search.html  searchindex.js
_sources/: contour.txt  graphics.txt
arch/: PKGBUILD
debian/: build.sh  control
examples/: contour-plots.lua  histo.lua  integral-anim.lua  plot-simple.lua  vonkoch-anim.lua  vonkoch.lua
scripts/: exports.sh
src/: Makefile  agg-parse-trans.cpp  agg_font_freetype.cpp  agg_platform_support_win32.cpp  bitmap-plot.cpp  canvas-window-cpp.h  canvas-window.cpp  defs.h  draw_svg.cpp  draw_svg.h  fonts.cpp  fonts.h  image_write_x11.cpp  lua-compat.c  lua-compat.h  lua-cpp-utils.h  lua-draw.cpp  lua-graph-priv.h  lua-graph.cpp  lua-graph.h  lua-plot.cpp  lua-text.cpp  makeconfig  makedefs  makegraphdefs  makerules  meson.build  plot.cpp  plot.h  split-parser.h  split_area.h  text.cpp  window-cpp.h  window.cpp  window.h  window_lua.cpp  window_lua.h  window_registry.cpp
src/core/: Makefile  WindowRenderer.cpp  WindowRenderer.h  WindowUpdate.h  agg-pixfmt-config.h  agg_platform_support_win32.cpp  agg_platform_support_x11.cpp  bitmap-plot.cpp  bitmap-plot.h  canvas-window-cpp.h  canvas-window.cpp  canvas.h  canvas_svg.cpp  canvas_svg.h  colors.cpp  colors.h  drawing.h  fonts.cpp  fonts.h  gamma.cpp  gamma.h  graph_locks.cpp  graph_locks.h  pixel_fmt.h  plot.cpp  plot.h  sg_plot.h  window.h
src/lua/: Makefile  agg-parse-trans.cpp  lua-colors.cpp  lua-colors.h  lua-cpp-utils.h  lua-graph.cpp  lua-graph.h  lua-plot.cpp  split_area.cpp  window_lua.cpp
src/str/: Makefile
subprojects/: libagg.wrap
tests/: Makefile  plot1.cpp  plot1_svg.cpp
